syntax = "proto3";

package ampb;

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";


message CreateAnimeMovieServerRequest {
    int64 animeID = 1;
}

message CreateAnimeMovieServerResponse {
    int64 animeID = 1;
    int64 serverID = 2;
}
