syntax = "proto3";

package ampb;

import "ampb/anime_movie.proto";
import "ampb/server.proto";
import "nfpb/meta.proto";
import "nfpb/genre.proto";
import "nfpb/studio.proto";
import "shpb/anime_resource.proto";
import "shpb/anime_link.proto";
import "shpb/anime_image.proto";
import "shpb/anime_trailer.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message GetFullAnimeMovieRequest {
    int64 animeID = 1;
    int32 languageID = 2;
}

message GetFullAnimeMovieResponse { 
    AnimeMovieResponse animeMovie = 1;
    nfpb.AnimeMetaResponse animeMeta = 2;
    shpb.AnimeResourceResponse animeResources = 3;
    nfpb.AnimeGenresResponse animeGenres = 4;
    nfpb.AnimeStudiosResponse animeStudios = 5;
    shpb.AnimeLinkResponse animeLinks = 6;
    shpb.AnimeImageResponse animeImages = 7;
    repeated shpb.AnimeTrailerResponse animeTrailers = 8;
    int64 serverID = 9;
    AnimeMovieSubDataResponse sub = 10;
    AnimeMovieDubDataResponse dub = 11;
}